5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2171/executions/1668_2972.log
== TEST (2019-04-15 19:20:04) 
-- CODE:
x = input(int("A posicao inicial do objeto :"))
y = input(int("A velocidade do objeto :"))
z = input(int("O tempo de deslocamento :"))
a = S = s + vt 
print("a")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = input(int("A posicao inicial do objeto :"))
ValueError: invalid literal for int() with base 10: 'A posicao inicial do objeto :'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:20:35) 
-- CODE:
x = float(int("A posicao inicial do objeto :"))
y = float(int("A velocidade do objeto :"))
z = float(int("O tempo de deslocamento :"))
a = S = s + vt 
print("a")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = float(int("A posicao inicial do objeto :"))
ValueError: invalid literal for int() with base 10: 'A posicao inicial do objeto :'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:20:37) 
-- CODE:
x = float(int("A posicao inicial do objeto :"))
y = float(int("A velocidade do objeto :"))
z = float(int("O tempo de deslocamento :"))
a = S = s + vt 
print("a")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = float(int("A posicao inicial do objeto :"))
ValueError: invalid literal for int() with base 10: 'A posicao inicial do objeto :'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:21:07) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
a = S = s + vt 
print("a")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = S = s + vt 
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:28:16) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
if
	print("sim"):
else :
	print(" nao ")
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:28:18) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
if
	print("sim"):
else :
	print(" nao ")
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:28:18) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
if
	print("sim"):
else :
	print(" nao ")
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:28:19) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
if
	print("sim"):
else :
	print(" nao ")
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:28:19) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
if
	print("sim"):
else :
	print(" nao ")
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:28:20) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
if
	print("sim"):
else :
	print(" nao ")
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:28:20) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
if
	print("sim"):
else :
	print(" nao ")
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:29:03) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
if
	print("sim"):
else :
	print(" nao ")
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:35:06) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
if
	print("sim"):
else :
	print("nao")
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:35:21) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
if
	print("nao"):
else :
	print("sim")
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:35:22) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
if
	print("nao"):
else :
	print("sim")
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:35:29) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
if
	print("nao")
else :
	print("sim")
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:35:46) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
	if
print("nao")
	else :
print("sim")
-- ERROR:
File "XXXX", line 4
    if
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:35:48) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
	if
print("nao")
	else :
print("sim")
-- EXECUTION TIME:
0.176634
-- ERROR:
  File "/home/codebench/codes/1668/2972/main.py", line 4
    if
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:35:50) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
	if
print("nao")
	else :
print("sim")
-- ERROR:
File "XXXX", line 4
    if
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:36:04) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
	if
print("nao")
	else:
print("sim")
-- ERROR:
File "XXXX", line 4
    if
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:38:34) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
S = s + vt 	
if
print(S)
else:
print("sim ou nao")
-- ERROR:
File "XXXX", line 5
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:38:43) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
S = s + vt 	
if
print("S")
else:
print("sim ou nao")
-- ERROR:
File "XXXX", line 5
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:38:44) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
S = s + vt 	
if
print("S")
else:
print("sim ou nao")
-- ERROR:
File "XXXX", line 5
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:38:58) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
S = s + vt 	
if
print(S)
else:
print(sim ou nao)
-- ERROR:
File "XXXX", line 5
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:40:28) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
S = s0 + vt 	
if(1000<0):
print(sim)
else:
print(nao )
-- ERROR:
File "XXXX", line 6
    print(sim)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:40:29) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
S = s0 + vt 	
if(1000<0):
print(sim)
else:
print(nao )
-- ERROR:
File "XXXX", line 6
    print(sim)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:40:43) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
S = s0 + vt 	
if(1000<0):
	print(sim)
else:
	print(nao )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    S = s0 + vt 	
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:41:47) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
S = s + vt 	
if(1000<0):
	print(sim)
else:
	print(nao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    S = s + vt 	
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:42:08) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
S = i + vt 	
if(1000<0):
	print(sim)
else:
	print(nao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    S = i + vt 	
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:42:45) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
S = s0 + vt 	
if(0<1000):
	print(sim)
else:
	print(nao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    S = s0 + vt 	
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:43:06) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))

if(0<1000):
	print(sim)
else:
	print(nao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(sim)
NameError: name 'sim' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:43:43) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
S = s0 + vt
if(0<1000):
	print(sim)
else:
	print(nao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    S = s0 + vt
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:44:13) 
-- CODE:
x = float(input("A posicao inicial do objeto :"))
y = float(input("A velocidade do objeto :"))
z = float(input("O tempo de deslocamento :"))
S = s0 + vt
if(0<1000):
	print(nao)
else:
	print(sim)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    S = s0 + vt
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:44:54) 
-- CODE:
x = int(input("A posicao inicial do objeto :"))
y = int(input("A velocidade do objeto :"))
z = int(input("O tempo de deslocamento :"))
S = s0 + vt
if(0<1000):
	print(nao)
else:
	print(sim)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    S = s0 + vt
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:45:24) 
-- CODE:
x = int(input("A posicao inicial do objeto :"))
y = int(input("A velocidade do objeto :"))
z = int(input("O tempo de deslocamento :"))
S = s0 + vt
if(0<=1000):
	print(nao)
else:
	print(sim)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    S = s0 + vt
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:45:59) 
-- CODE:
x = int(input("A posicao inicial do objeto :"))
y = int(input("A velocidade do objeto :"))
z = int(input("O tempo de deslocamento :"))
S = s0 + vt
if(0<=1000):
	print("sim")
else:
	print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    S = s0 + vt
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:46:22) 
-- CODE:
x = int(input("A posicao inicial do objeto :"))
y = int(input("A velocidade do objeto :"))
z = int(input("O tempo de deslocamento :"))
S = s0 + vt
if(0<=1000):
	print("sim")
else:
	print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    S = s0 + vt
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:48:57) 
-- CODE:
x = int(input("A posicao inicial do objeto :"))
y = int(input("A velocidade do objeto :"))
z = int(input("O tempo de deslocamento :"))
S = s0 + vt
if(0<=1000):
	print("sim")
else:
	print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    S = s0 + vt
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:50:06) 
-- CODE:
x = int(input("A posicao inicial do objeto :"))
y = int(input("A velocidade do objeto :"))
z = int(input("O tempo de deslocamento :"))
S = s0 + vt
if(s0 0<=1000):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 5
    if(s0 0<=1000):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:50:07) 
-- CODE:
x = int(input("A posicao inicial do objeto :"))
y = int(input("A velocidade do objeto :"))
z = int(input("O tempo de deslocamento :"))
S = s0 + vt
if(s0 0<=1000):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.164157
-- ERROR:
  File "/home/codebench/codes/1668/2972/main.py", line 5
    if(s0 0<=1000):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:50:07) 
-- CODE:
x = int(input("A posicao inicial do objeto :"))
y = int(input("A velocidade do objeto :"))
z = int(input("O tempo de deslocamento :"))
S = s0 + vt
if(s0 0<=1000):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 5
    if(s0 0<=1000):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:50:09) 
-- CODE:
x = int(input("A posicao inicial do objeto :"))
y = int(input("A velocidade do objeto :"))
z = int(input("O tempo de deslocamento :"))
S = s0 + vt
if(s0 0<=1000):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 5
    if(s0 0<=1000):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:50:19) 
-- CODE:
x = int(input("A posicao inicial do objeto :"))
y = int(input("A velocidade do objeto :"))
z = int(input("O tempo de deslocamento :"))
S = s0 + vt
if(s 0<=1000):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 5
    if(s 0<=1000):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:50:41) 
-- CODE:
x = int(input("A posicao inicial do objeto :"))
y = int(input("A velocidade do objeto :"))
z = int(input("O tempo de deslocamento :"))
S = s0 + vt
if(s0<=1000):
	print("sim")
else:
	print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    S = s0 + vt
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:52:04) 
-- CODE:
x = int(input("A posicao inicial do objeto :"))
y = int(input("A velocidade do objeto :"))
z = int(input("O tempo de deslocamento :"))
S = s0 + vt
if(s0<=1000):
	print("sim")
else:
	print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    S = s0 + vt
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:53:54) 
-- CODE:
x = int(input("A posicao inicial do objeto :"))
y = int(input("A velocidade do objeto :"))
z = int(input("O tempo de deslocamento :"))
s = s0+(v*t)
if(s >=1000):
	print("sim")
else:
	print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+(v*t)
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:54:20) 
-- CODE:
x = int(input("A posicao inicial do objeto :"))
y = int(input("A velocidade do objeto :"))
z = int(input("O tempo de deslocamento :"))
s = s0+(v*t)
print(s)
if(s >=1000):
	print("sim")
else:
	print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+(v*t)
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
